fdo#73682 Force .xls files to check for a Calc filter first.

While I'm not happy with this "Fix", it seems that some apps/web services
use .xls extension to indicate that the given file should be opened by a
spreadsheet software. A similar change was already made in text detection
by commit 8a201be240b6d408d15166be7ffc576b9e123634.

This change should affect only HTML & RTF, as the only formats which have
also a Calc filter.

Also included in this commit some spelling correction.

Change-Id: I7afc6c31184d924ea19778c1824b4ca5f42c190b