filter/source/config/cache/typedetection.cxx
@@ -480,10 +480,24 @@ void TypeDetection::impl_checkResultsAndAddBestFilter(utl::MediaDescriptor& rDes
 
     // b)
     // check a preselected document service too.
-    // Then we have to search a suitable filter witin this module.
     OUString sDocumentService = rDescriptor.getUnpackedValueOrDefault(
                                             utl::MediaDescriptor::PROP_DOCUMENTSERVICE(),
                                             OUString());
+
+    // When no document service is set, set one according to the file extension
+    if (sDocumentService.isEmpty())
+    {
+        OUString aUrl = rDescriptor[ utl::MediaDescriptor::PROP_URL() ].get<OUString>();
+        INetURLObject aParser(aUrl);
+        OUString aExt = aParser.getExtension(
+            INetURLObject::LAST_SEGMENT, true, INetURLObject::DECODE_WITH_CHARSET);
+        aExt = aExt.toAsciiLowerCase();
+
+        if (aExt == "xls")
+            sDocumentService = "com.sun.star.sheet.SpreadsheetDocument";
+    }
+
+    // Then search for a suitable filter within this module.
     if (!sDocumentService.isEmpty())
     {
         try
@@ -493,7 +507,7 @@ void TypeDetection::impl_checkResultsAndAddBestFilter(utl::MediaDescriptor& rDes
             // SAFE ->
             ::osl::ResettableMutexGuard aLock(m_aLock);
 
-            // Attention: For executing next lines of code, We must be shure that
+            // Attention: For executing next lines of code, We must be sure that
             // all filters already loaded :-(
             // That can disturb our "load on demand feature". But we have no other chance!
             m_rCache->load(FilterCache::E_CONTAINS_FILTERS);
@@ -575,7 +589,7 @@ void TypeDetection::impl_checkResultsAndAddBestFilter(utl::MediaDescriptor& rDes
         // SAFE ->
         ::osl::ResettableMutexGuard aLock(m_aLock);
 
-        // Attention: For executing next lines of code, We must be shure that
+        // Attention: For executing next lines of code, We must be sure that
         // all filters already loaded :-(
         // That can disturb our "load on demand feature". But we have no other chance!
         m_rCache->load(FilterCache::E_CONTAINS_FILTERS);
@@ -743,7 +757,7 @@ bool TypeDetection::impl_getPreselectionForDocumentService(
         // SAFE -> --------------------------
         ::osl::ResettableMutexGuard aLock(m_aLock);
 
-        // Attention: For executing next lines of code, We must be shure that
+        // Attention: For executing next lines of code, We must be sure that
         // all filters already loaded :-(
         // That can disturb our "load on demand feature". But we have no other chance!
         m_rCache->load(FilterCache::E_CONTAINS_FILTERS);
@@ -1088,7 +1102,7 @@ OUString TypeDetection::impl_askUserForTypeAndFilterIfAllowed(utl::MediaDescript
 
     // Dont distrub the user for "non existing files - means empty URLs" or
     // if we was forced to detect a stream.
-    // Reason behind: We must be shure to ask user for "unknown contents" only ...
+    // Reason behind: We must be sure to ask user for "unknown contents" only ...
     // and not for "missing files". Especialy if detection is done by a stream only
     // we cant check if the stream points to an "existing content"!
     if (
@@ -1111,7 +1125,7 @@ OUString TypeDetection::impl_askUserForTypeAndFilterIfAllowed(utl::MediaDescript
         // "OK" pressed => verify the selected filter, get it's corresponding
         // type and return it. (BTW: We must update the media descriptor here ...)
         // The user selected explicitly a filter ... but normaly we are interested on
-        // a type here only. But we must be shure, that the selected filter is used
+        // a type here only. But we must be sure, that the selected filter is used
         // too and no ambigous filter registration disturb us .-)
 
         OUString sFilter = aRequest.getFilter();
